--- a/project_qusasa/requirements.txt
+++ b/project_qusasa/requirements.txt
@@ -1,9 +1,6 @@
 celery==5.4.0
 channels==4.0.0
 channels-redis==4.2.0
-cohere==4.55
-constantly==15.1.0
-ctransformers==0.2.27
 daphne==4.1.0
 Django==4.2.6
 django-appconf==1.0.6
@@ -11,9 +8,6 @@ django-debug-toolbar==4.2.0
 django-extensions==3.2.3
 django-formtools==2.4.1
 django-staticfiles==1.2.1
-dlib==19.24.2
-exceptiongroup==1.1.3
-flower==2.0.1
 google-api-core==2.14.0
 google-api-python-client==2.108.0
 google-auth==2.23.4
@@ -27,26 +21,13 @@ httpcore==1.0.2
 httplib2==0.22.0
 httpx==0.25.1
 instagrapi==2.0.3
-jsonpatch==1.33
-jsonpointer==2.1
-keras==2.15.0
 keras-core==0.1.7
 keras-nlp==0.8.1
 keybert==0.8.3
-kombu==5.3.7
-langchain==0.1.12
-langchain-community==0.0.28
-langchain-core==0.1.31
-langchain-text-splitters==0.0.1
-langsmith==0.1.24
-matplotlib-venn==0.11.10
-navigator-updater==0.4.0
-oauthlib==3.2.2
 openai==1.2.0
 openai-whisper @ git+https://github.com/openai/whisper.git@e58f28804528831904c3b6f2c0e473f346223433
 opencv-python==4.8.1.78
 openpyxl==3.0.10
-pandas==2.2.1
 pandasai==2.0.9
 pillow==10.2.0
 python-decouple==3.8
@@ -58,32 +39,14 @@ pytube==15.0.0
 queuelib==1.5.0
 redis==5.0.3
 redis-cli==1.0.1
-requests-oauthlib==1.3.1
-rich==13.7.0
-rsa==4.9
-safetensors==0.4.2
-sentence-transformers==2.2.2
 sentencepiece==0.1.99
-sqlparse==0.4.4
-TBB==0.2
-tensorboard==2.15.2
-tensorboard-data-server==0.7.2
-tensorflow==2.15.0
-tensorflow-estimator==2.15.0
-tensorflow-io-gcs-filesystem==0.36.0
-tensorflow-macos==2.15.0
+tensorflow==2.16.1
 tokenizers==0.13.2
-torch==2.1.0
-torchvision==0.16.0
-traitlets==5.14.2
+torch==2.2.0
+torchvision==0.17.0
 transformers==4.29.2
-urllib3==2.1.0
 uvicorn==0.28.0
-webencodings==0.5.1
-websockets==12.0
-Werkzeug==3.0.1
 whitenoise==6.6.0
-wordcloud==1.9.3
 yt-dlp==2023.11.16
-numpy==1.24.3
-pandas==2.2.1
+dj_database_url==2.1.0
+
