--- a/project_qusasa/docker-compose.yml
+++ b/project_qusasa/docker-compose.yml
@@ -1,27 +1,48 @@
 version: '3.9'
 
 services:
+  db:
+    image: postgres:12
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    environment:
+      POSTGRES_DB: project_qusasa
+      POSTGRES_USER: ${DB_USER}
+      POSTGRES_PASSWORD: ${DB_PASS}
+    ports:
+      - "5432:5432"
+    healthcheck:
+      test: ["CMD", "pg_isready", "-U", "${DB_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   web:
     build: .
+    image: qusasa-cloud-image:v2
     command: "uvicorn project_qusasa.asgi:application --host 0.0.0.0 --port 8000 --workers 3"
     volumes:
       - .:/app
     ports:
       - "8000:8000"
     depends_on:
-      - redis
+      redis:
+        condition: service_healthy
+      db:
+        condition: service_healthy
     environment:
       - REDIS_URL=redis://redis:6379
+      - DATABASE_URL=${DB_CONNECTION_STRING}
       - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - SECRET_KEY = ${SECRET_KEY}
-      - USER_IG = ${USER_IG}
-      - PASS_IG = ${PASS_IG}
-      - EMAIL_ADD = ${EMAIL_ADD}
-      - PASS_EMAIL = ${PASS_EMAIL}
-      - DEVELOPER_KEY = ${DEVELOPER_KEY}
-      - EMAIL_HOST_USER = ${EMAIL_HOST_USER}
-      - EMAIL_HOST_PASSWORD = ${EMAIL_HOST_PASSWORD}
-      - DEBUG = False
+      - SECRET_KEY=${SECRET_KEY}
+      - USER_IG=${USER_IG}
+      - PASS_IG=${PASS_IG}
+      - EMAIL_ADD=${EMAIL_ADD}
+      - PASS_EMAIL=${PASS_EMAIL}
+      - DEVELOPER_KEY=${DEVELOPER_KEY}
+      - EMAIL_HOST_USER=${EMAIL_HOST_USER}
+      - EMAIL_HOST_PASSWORD=${EMAIL_HOST_PASSWORD}
+      - DEBUG=False
 
   celery:
     build: .
@@ -30,10 +51,21 @@ services:
       - .:/app
     depends_on:
       - redis
+      - db
     environment:
       - REDIS_URL=redis://redis:6379
 
   redis:
-    image: redis:alpine
+    image: redis:6.2-alpine
     ports:
       - "6379:6379"
+    volumes:
+      - redis_data:/data
+
+volumes:
+  postgres_data:
+  redis_data:
+
+networks:
+  default:
+    driver: bridge
