--- a/project_qusasa/celery-deployment.yaml
+++ b/project_qusasa/celery-deployment.yaml
@@ -1,26 +1,114 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: celery-worker
+  name: qusasa-celery-deployment
 spec:
   replicas: 1
   selector:
     matchLabels:
-      task: worker
+      app: qusasa-celery
   template:
     metadata:
       labels:
-        task: worker
+        app: qusasa-celery
     spec:
       containers:
-      - name: worker
-        image: qusasa-cloud-image:v4
-        command: ["celery", "-A", "project_qusasa", "worker", "--loglevel=debug"]
-        env:
-        - name: REDIS_URL
-          value: "redis://redis-service:6379"
-        - name: DATABASE_URL
-          valueFrom:
-            secretKeyRef:
-              name: qusasa-database-secrets
-              key: DB_CONNECTION_STRING
+        - name: qusasa-celery
+          image: gcr.io/qusasa/qusasa-cloud-image:v5
+          command: ["celery", "-A", "project_qusasa", "worker", "--loglevel=info"]
+          imagePullPolicy: Always
+          env:
+            - name: DEBUG
+              value: "True"
+            - name: DEVELOPER_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-secrets
+                  key: DEVELOPER_KEY
+            - name: EMAIL_ADD
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-secrets
+                  key: EMAIL_ADD
+            - name: EMAIL_HOST_PASSWORD
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-secrets
+                  key: EMAIL_HOST_PASSWORD
+            - name: EMAIL_HOST_USER
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-secrets
+                  key: EMAIL_HOST_USER
+            - name: OPENAI_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-secrets
+                  key: OPENAI_API_KEY
+            - name: PASS_EMAIL
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-secrets
+                  key: PASS_EMAIL
+            - name: PASS_IG
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-secrets
+                  key: PASS_IG
+            - name: DATABASE_URL
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-database-secrets
+                  key: DB_CONNECTION_STRING
+            - name: REDIS_URL
+              value: redis://redis-service:6379
+            - name: SECRET_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-secrets
+                  key: SECRET_KEY
+            - name: USER_IG
+              value: "nanafairy07"
+            - name: DB_USER
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-database-secrets
+                  key: DB_USER
+            - name: DB_PASS
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-database-secrets
+                  key: DB_PASS
+            - name: DB_HOST
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-database-secrets
+                  key: DB_HOST
+            - name: DB_NAME
+              valueFrom:
+                secretKeyRef:
+                  name: qusasa-database-secrets
+                  key: DB_NAME
+            - name: ALLOWED_HOSTS
+              value: "0.0.0.0"
+            - name: SECURE_SSL_REDIRECT
+              value: "False"
+            - name: SECURE_HSTS_SECONDS
+              value: "0"
+            - name: SECURE_HSTS_INCLUDE_SUBDOMAINS
+              value: "False"
+            - name: SECURE_HSTS_PRELOAD
+              value: "False"
+            - name: SESSION_COOKIE_SECURE
+              value: "False"
+            - name: CSRF_COOKIE_SECURE
+              value: "False"
+            - name: SECURE_CONTENT_TYPE_NOSNIFF
+              value: "False"
+          resources:
+            requests:
+              memory: "2048Mi"
+              cpu: "1000m"
+            limits:
+              memory: "4096Mi"
+              cpu: "2000m"
