--- a/project_qusasa/requirements.txt
+++ b/project_qusasa/requirements.txt
@@ -28,3 +28,5 @@ bs4==0.0.2
 psycopg2-binary==2.9.9
 django-cors-headers==4.3.1
 websockets==12.0
+django-storages==1.13.2  # Add this line
+google-cloud-storage==2.10.0  # Add this line
